--- a/drive.service
+++ b/drive.service
@@ -3,7 +3,10 @@ Description=drive the car
 After=multi-user.target
 
 [Service]
-ExecStart=/usr/bin/python3 /home/pi/Desktop/project/selfdrivingcar/rest_main.py
+Restart=always
+WorkingDirectory=/home/pi
+User=pi
+ExecStart=/home/pi/Desktop/project/selfdrivingcar/./rest_main.py
 
 [Install]
 WantedBy=multi-user.target
